fix flicker when updating progress bar

--- a/www/css/landing.css
+++ b/www/css/landing.css
@@ -1365,7 +1365,7 @@ td {
 
 /* line 369, ../scss/components/_landing.scss */
 .case_study img {
-  opacity: .7;
+  opacity: .5;
   max-width: 900px;
   border: 2px solid #0479af;
 }
@@ -2176,13 +2176,14 @@ progress::-webkit-progress-value, progress.yellow_progress {
 /* line 328, ../scss/components/_progress_bars.scss */
 .progress_bar.ui-progressbar {
   height: 4px;
+  min-height: 4px;
   border-radius: 0px;
   width: 800px;
   margin: 60px;
   margin-top: 80px;
 }
 
-/* line 336, ../scss/components/_progress_bars.scss */
+/* line 337, ../scss/components/_progress_bars.scss */
 #payment_progress.progress_bar {
   height: 2px;
   border-radius: 0px;
@@ -2191,7 +2192,7 @@ progress::-webkit-progress-value, progress.yellow_progress {
   background: #bababa;
 }
 
-/* line 345, ../scss/components/_progress_bars.scss */
+/* line 346, ../scss/components/_progress_bars.scss */
 .agreement_progress_tick:last-child {
   display: none;
 }
