--- a/www/css/main_app.css
+++ b/www/css/main_app.css
@@ -4887,13 +4887,14 @@ progress::-webkit-progress-value, progress.yellow_progress {
 /* line 328, ../scss/components/_progress_bars.scss */
 .progress_bar.ui-progressbar {
   height: 4px;
+  min-height: 4px;
   border-radius: 0px;
   width: 800px;
   margin: 60px;
   margin-top: 80px;
 }
 
-/* line 336, ../scss/components/_progress_bars.scss */
+/* line 337, ../scss/components/_progress_bars.scss */
 #payment_progress.progress_bar {
   height: 2px;
   border-radius: 0px;
@@ -4902,7 +4903,7 @@ progress::-webkit-progress-value, progress.yellow_progress {
   background: #bababa;
 }
 
-/* line 345, ../scss/components/_progress_bars.scss */
+/* line 346, ../scss/components/_progress_bars.scss */
 .agreement_progress_tick:last-child {
   display: none;
 }
